--- a/IDCalculator/IDCalculator/Storyboard_iPhone.storyboard
+++ b/IDCalculator/IDCalculator/Storyboard_iPhone.storyboard
@@ -105,10 +105,10 @@
             </objects>
             <point key="canvasLocation" x="1616" y="821"/>
         </scene>
-        <!--View Controller - Graph-->
+        <!--Canvas2D View Controller - Graph-->
         <scene sceneID="Nyj-8b-dZJ">
             <objects>
-                <viewController id="yMC-G2-Gh5" sceneMemberID="viewController">
+                <viewController id="yMC-G2-Gh5" customClass="Canvas2DViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YrF-xe-fbd" customClass="Canvas2DView">
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -126,6 +126,9 @@
                         </connections>
                     </view>
                     <tabBarItem key="tabBarItem" title="Graph" image="chart_line_24.png" id="kxU-Lg-trf"/>
+                    <connections>
+                        <outlet property="canvas" destination="YrF-xe-fbd" id="CZ1-ws-S55"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jpl-Ex-ejo" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <panGestureRecognizer minimumNumberOfTouches="1" maximumNumberOfTouches="1" id="QpQ-gP-aQX">
@@ -722,6 +725,12 @@
             <relationships>
                 <relationship kind="action" name="dragReceived:"/>
                 <relationship kind="action" name="tapReceived:"/>
+            </relationships>
+        </class>
+        <class className="Canvas2DViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/Canvas2DViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="canvas" candidateClass="Canvas2DView"/>
             </relationships>
         </class>
         <class className="ConsoleViewController" superclassName="UIViewController">
