--- a/IDCalculator/IDCalculator/en.lproj/Storyboard_iPad.storyboard
+++ b/IDCalculator/IDCalculator/en.lproj/Storyboard_iPad.storyboard
@@ -8,9 +8,30 @@
         <scene sceneID="wqI-4z-aI6">
             <objects>
                 <viewController id="xeG-JQ-UC9" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="oDk-95-Zli">
+                    <view key="view" contentMode="scaleToFill" id="s0E-ib-Cid">
                         <rect key="frame" x="0.0" y="64" width="768" height="911"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="lVj-QW-doN">
+                                <rect key="frame" x="0.0" y="845" width="768" height="66"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            </adBannerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="QOZ-C1-dNm">
+                                <rect key="frame" x="311" y="374" width="146" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="View Online Help">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="1v7-B3-AAK" kind="push" id="x0A-GP-Lja"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="About" id="sxe-7O-yo8"/>
@@ -18,6 +39,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bEt-JS-rWx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1522" y="1822"/>
+        </scene>
+        <!--Pad Help View Controller - Online Help-->
+        <scene sceneID="qq1-hk-Pla">
+            <objects>
+                <viewController id="1v7-B3-AAK" customClass="PadHelpViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bo5-dJ-wT5">
+                        <rect key="frame" x="0.0" y="64" width="768" height="911"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" id="3CC-Iz-XeI">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="911"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
+                            <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="B4u-XQ-dNt">
+                                <rect key="frame" x="0.0" y="845" width="768" height="66"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            </adBannerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Online Help" id="b1i-0s-EPG"/>
+                    <connections>
+                        <outlet property="webView" destination="3CC-Iz-XeI" id="uHj-fR-5Yi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rUj-aZ-B2b" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2560" y="1822"/>
         </scene>
         <!--Pad Console View Controller - Console-->
         <scene sceneID="yFi-F7-Zuo">
@@ -347,6 +397,21 @@
                                             <action selector="textButtonPressed:" destination="ZAE-xb-zlZ" eventType="touchUpInside" id="s3X-yn-Eej"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="wCP-57-LGm">
+                                        <rect key="frame" x="422" y="7" width="44" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" title="^">
+                                            <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="textButtonPressed:" destination="ZAE-xb-zlZ" eventType="touchUpInside" id="bzk-No-PyN"/>
+                                        </connections>
+                                    </button>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Command:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4Xa-Td-OMk">
                                         <rect key="frame" x="6" y="113" width="84" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -398,6 +463,12 @@
                     <view key="view" contentMode="scaleToFill" id="sDl-u3-8Cf" customClass="Canvas2DView">
                         <rect key="frame" x="0.0" y="20" width="768" height="955"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="459-T1-uJG">
+                                <rect key="frame" x="0.0" y="889" width="768" height="66"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            </adBannerView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <connections>
@@ -427,6 +498,7 @@
         <!--Navigation Controller - About-->
         <scene sceneID="uMh-YW-WfZ">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L35-ak-Wfi" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="I2c-NE-jna" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="About" image="gear_24.png" id="6Wr-PK-eCB"/>
                     <toolbarItems/>
@@ -439,7 +511,6 @@
                         <segue destination="xeG-JQ-UC9" kind="relationship" relationship="rootViewController" id="KtK-f8-1oL"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="L35-ak-Wfi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="505" y="1822"/>
         </scene>
@@ -471,6 +542,12 @@
                 <relationship kind="outlet" name="display" candidateClass="UITextView"/>
                 <relationship kind="outlet" name="inputField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="keyboardView" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="PadHelpViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PadHelpViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
             </relationships>
         </class>
     </classes>
