--- a/IDCalculator/IDCalculator/en.lproj/Storyboard_iPad.storyboard
+++ b/IDCalculator/IDCalculator/en.lproj/Storyboard_iPad.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="wZP-kb-xTu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="wZP-kb-xTu">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
@@ -73,7 +73,7 @@
             <objects>
                 <viewController id="ZAE-xb-zlZ" customClass="PadConsoleViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="B4O-lb-uwR">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1023.9999999999999"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" id="HZA-g0-mCc">
@@ -85,7 +85,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" id="7jP-Kf-hg8">
-                                <rect key="frame" x="0.0" y="823.99999999999989" width="768" height="145"/>
+                                <rect key="frame" x="0.0" y="823.99999999999977" width="768" height="145"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="cu8-5k-9UB">
